# base-render

./: CMakeLists.txt  compile_commands.json
inc/: base.hpp  buffer.hpp  descriptor.hpp  device.hpp  graphics_pipeline.hpp  image.hpp  layout.hpp  swapchain.hpp  util.hpp
src/: main.cpp
src/base/: base.cpp  base.hpp  buffer.cpp  descriptor.cpp  device.cpp  graphics_pipeline.cpp  image.cpp  image.hpp  layout.cpp  swapchain.cpp  util.cpp  util.hpp
tests/: base_triangle.cpp  base_triangle.hpp  main.cpp
tests/base_triangle/: base_triangle.cpp  base_triangle.hpp
tests/buffer_triangle/: buffer_triangle.cpp  buffer_triangle.hpp  main.cpp
tests/index_buffer/: index_buffer.cpp  index_buffer.hpp  main.cpp
tests/texture/: main.cpp  texture.cpp  texture.hpp
tests/uniform/: main.cpp  uniform.cpp  uniform.hpp
